cmake_minimum_required (VERSION 3.22)

project(TestVehicle)

# #################################################################################################
# ADD MACROS
# #################################################################################################
add_definitions(
  -DLINUX
)

# #################################################################################################
# SET C++ FLAGS
# #################################################################################################

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -fopenmp")

# #################################################################################################
# CXX Standard
# #################################################################################################

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a")

# #################################################################################################
# Find fmt
# #################################################################################################
find_package(fmt REQUIRED)


# #################################################################################################
# Find Boost
# #################################################################################################
find_package(Boost COMPONENTS
  regex system filesystem date_time thread program_options REQUIRED
)
include_directories(
   ${Boost_INCLUDE_DIRS}
   ${PROJECT_INCLUDE_VISIBILITY}
)



# #################################################################################################
# CREATE EXECUTABLE
# #################################################################################################
set(SOURCES
    ${PROJECT_NAME}.cpp
    ../../DDSCommon/DDSCommon.cpp
    ../../DDSCommon/DDSHelper.cpp
)
add_executable( ${PROJECT_NAME}
    ${SOURCES}
)

# #################################################################################################
# DISTRIBUTED FILES
# #################################################################################################
file(COPY ../scripts/TestVehicle.bash DESTINATION ${CMAKE_BINARY_DIR}/bin/)

# #################################################################################################
# LINK LIBRARIES TO TARGET
# #################################################################################################
target_link_libraries(${PROJECT_NAME}
  ${Boost_LIBRARIES}
  dl
  rt
  pthread
  ${DDS_LIBRARIES}
  fmt
)
